# book-me-aws-terraform

./: .gitignore  LICENSE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
api/: .dockerignore  Dockerfile  manage.py  pyproject.toml
api/authentication/: admin.py  apps.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
api/authentication/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions_and_more.py  0003_alter_user_account_status.py  0004_user_accepted_newsletter_and_more.py
api/authentication/value_objects/: __init__.py  account_status.py  account_type.py
api/barber/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  urls.py  utils.py  views.py
api/barber/migrations/: 0001_initial.py  0002_alter_serviceunavailability_start_date.py  0003_serviceoffer_author.py  0004_alter_serviceoffer_author.py  0005_serviceoffer_thumbnail_alter_serviceoffer_image.py
api/barber/value_objects/: __init__.py  barber_specialization.py  offer_status.py  open_hours.py  working_days.py
api/core/: asgi.py  storage_backends.py  urls.py  utils.py  validators.py
api/core/config/: settings.py  utils.py
api/customer/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
api/customer/migrations/: 0001_initial.py  0002_alter_serviceorder_status.py  0003_alter_serviceorder_service_time_and_more.py
api/customer/value_objects/: __init__.py  order_status.py
api/management/: initial_data.py
api/management/migrations/: 0001_initial.py
api/scripts/: push_config_file_to_bucket.sh  push_image_to_registry.sh  run_code_formatters.sh  run_linters.sh
api/tasks/: celery.py
api/tasks/email_tasks/: __init__.py  account_activation.py  email_sending_core.py
api/tasks/image_handling/: __init__.py  resize_image.py
api/websockets/: templates.py  triggers.py  utils.py
api/websockets/consumers/: __init__.py  base_consumer.py  service_offer.py  service_unavailabilities.py
certbot/: certify-init.sh
env_vars/: .env_api-sample  .env_certbot-sample  .env_db-sample  .env_frontend-sample  README.md
frontend/: Dockerfile  Dockerfile.prod  package-lock.json  package.json
frontend/public/: 50x.html  50x_style.css  index.html  manifest.json
frontend/scripts/: push_client_app_to_bucket.sh  terraform.tfstate
frontend/src/: App.js
frontend/src/components/: AppDescription.js  (+16 more)
prometheus/: prometheus.yml
proxy/: Dockerfile  run.sh
proxy/nginx/: default-ssl.conf.tpl  default.conf.tpl
resources/database_diagram/: erd.dot
scripts/: README.md  get_certbot_certificates.sh  install_deps.sh  renew_certbot_certificates.sh
service-config/api/: README.md
service-config/db/: README.md
service-config/frontend/: README.md
terraform/: README.md
terraform/applications/: README.md
terraform/diagrams/: aws-architecture.drawio
(+34 files in other folders)
